use the right chart

--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -15,8 +15,9 @@
                     <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
                         aria-hidden="true" id="chart-bubble-1" data-chartcontainer="bubble-1"></span>
                     <span id="chart-pie-1" class="pma-icon pe-7s-graph
-                        pma-fg-gray toggle-chart" data-chartcontainer="ejecutado_pie"></span>
-                    <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart"  data-chartcontainer="ejecutado"></span>
+                        pma-fg-gray toggle-chart" data-chartcontainer="asignado"></span>
+                    <span id="chart-bar-1" class="pma-icon pe-7s-graph3
+                        pma-fg-gray toggle-chart"  data-chartcontainer="tipo"></span>
                     <span class="pma-icon pe-7s-graph2 pma-fg-gray toggle-chart" data-chartcontainer="icons"></span>
             </div>
             <div class="col-md-11 bubbletree-container chart-container">
