--- a/core/static/css/pma.css
+++ b/core/static/css/pma.css
@@ -16,11 +16,12 @@ h1,
 h2,
 h3,
 h4 {
-    margin: 1.2em 0 0.5em;
+    margin: 1.2em 0 0.3em;
     font-family: 'Raleway', sans-serif;
     font-weight: inherit;
     line-height: 1.2;
 }
+h4 { margin: 0.2em 0 0.5em; }
 h1 {
     margin-top: 0;
     font-size: 2.074em;
