--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -314,7 +314,7 @@
 {% endblock %}
 
 {% block section4 %}
-<div class="container wide">
+<div class="container">
     <div class="row">
         <div class="col-md-12">
             <h2><strong>Información Histórica</strong><br>
@@ -362,7 +362,7 @@
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-md-12 text-center">
+        <div class="col-md-12 text-center medium">
             <button id="show-detail-3" class="blanco btn pma-bg-blue more" type="submit">
             Ver dealles en tabla</button>
         </div>
@@ -370,9 +370,9 @@
 </div>
 <div id="detail-3" class="container">
     <div class="row">
-        <div class="col-md-12 table-responsive">
+        <div class="col-md-offset-2 col-md-9 table-responsive">
             <table class="table table-condensed">
-                <tr class="info">
+                <tr class="bg-primary">
                     <th></th>
                     {% for year in year_list %}
                     <th class="text-center">{{ year }}
